--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -2,20 +2,26 @@
   padding: 30px 0;
   background-color: var(--color-white);
 
+  @include breakpointsMaxW($bp-768) {
+    padding: 20px 0;
+  }
+
   &__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
+    @include breakpointsMaxW($bp-container) {
+      gap: calc(17px + (20 - 17) * ((100vw - 991px) / (1230 - 991)));
+    }
   }
 
   &__tools {
     display: flex;
     align-items: center;
     gap: 20px;
-
     @include breakpointsMaxW($bp-991) {
-      display: none;
+      margin-left: auto;
     }
   }
 
@@ -33,8 +39,12 @@
       padding-left: calc(30px + (40 - 30) * ((100vw - 991px) / (1230 - 991)));
     }
     @include breakpointsMaxW($bp-991) {
-      font-size: 18px;
-      padding-left: 40px;
+      font-size: 16px;
+      padding-left: 30px;
+    }
+    @include breakpointsMaxW($bp-360) {
+      font-size: 14px;
+      padding-left: 28px;
     }
     &:hover {
       color: var(--color-accent);
@@ -55,6 +65,9 @@
   &__btn {
     @include breakpointsMaxW($bp-container) {
       font-size: calc(13px + (17 - 13) * ((100vw - 991px) / (1230 - 991)));
+    }
+    @include breakpointsMaxW($bp-991) {
+      display: none;
     }
   }
   &__toggle {
