--- a/app/scss/components/_menu-mobile.scss
+++ b/app/scss/components/_menu-mobile.scss
@@ -60,6 +60,13 @@
   }
 
   .mobile-menu-box {
+    &__top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    }
+
     &__content {
       padding-left: 20px;
     }
@@ -82,6 +89,11 @@
       display: block;
       font-size: 16px;
       padding: 5px 0;
+    }
+
+    &__btn {
+      width: 30px;
+      height: 30px;
     }
   }
 }
