--- a/app/scss/components/_menu.scss
+++ b/app/scss/components/_menu.scss
@@ -15,6 +15,10 @@
     }
   }
 
+  &__item {
+    position: relative;
+  }
+
   &__link {
     font-size: 17px;
     line-height: 1.1;
@@ -22,13 +26,13 @@
     position: relative;
     transition: 250ms ease;
     @include breakpointsMaxW($bp-container) {
-      font-size: calc(15px + (17 - 15) * ((100vw - 991px) / (1230 - 991)));
+      font-size: calc(14px + (17 - 14) * ((100vw - 991px) / (1230 - 991)));
     }
     @include breakpointsMaxW($bp-991) {
       font-size: 17px;
     }
 
-    &::after {
+    &::before {
       @include elDef();
       width: 100%;
       height: 2px;
@@ -42,8 +46,96 @@
 
     &:hover {
       color: var(--color-black);
-      &::after {
+      &::before {
         transform: scaleX(1);
+      }
+    }
+
+    &--dropdown {
+      padding-right: 15px;
+      position: relative;
+      border-radius: 5px;
+
+      &::after {
+        @include elDef();
+        width: 8px;
+        height: 8px;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        @include maskImage(url('../images/icons/chevron.svg'), 100%);
+        background-color: var(--color-dark);
+      }
+
+      &:hover {
+        & + .dropmenu {
+          opacity: 1;
+          visibility: visible;
+          transform: translateY(0);
+        }
+      }
+    }
+  }
+
+  .dropmenu {
+    transform: translateY(-10px);
+    opacity: 0;
+    visibility: hidden;
+    z-index: 10;
+    width: 400px;
+    position: absolute;
+    left: 0;
+    top: 45px;
+    background-color: var(--color-white);
+    box-shadow: 0px 19px 51px 0px rgba(53, 56, 62, 0.23);
+
+    border-radius: 5px;
+    padding: 0 21px;
+    transition: 450ms ease;
+    transition-delay: 150ms;
+
+    &:hover {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0);
+    }
+
+    &__item {
+      border-bottom: 1px solid #ebebeb;
+
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+
+    &__link {
+      display: block;
+      width: 100%;
+      color: var(--color-dark);
+      padding: 15px 0;
+      transition: 150ms ease;
+      position: relative;
+      padding-right: 20px;
+
+      &::after {
+        @include elDef();
+        width: 10px;
+        height: 10px;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%) rotate(-90deg);
+        @include maskImage(url('../images/sprite.svg#chevron'), 100%);
+        background-color: #d0d0d0;
+        transition: 150ms ease;
+      }
+
+      &:hover {
+        color: var(--color-accent);
+
+        &::after {
+          background-color: var(--color-accent);
+          transform: translateY(-50%) translateX(3px) rotate(-90deg);
+        }
       }
     }
   }
