--- a/app/scss/components/_questions.scss
+++ b/app/scss/components/_questions.scss
@@ -17,8 +17,8 @@
     background-color: var(--color-white);
     @include adaptive-value('padding-top', 50, 30, 1);
     @include adaptive-value('padding-bottom', 50, 30, 1);
-    @include adaptive-value('padding-left', 50, 20, 1);
-    @include adaptive-value('padding-right', 50, 20, 1);
+    @include adaptive-value('padding-left', 50, 5, 1);
+    @include adaptive-value('padding-right', 50, 5, 1);
   }
 }
 
@@ -44,6 +44,8 @@
       height: 60px;
       background-color: #f4f4fb;
     }
+
+
   }
 
   &__label {
@@ -60,6 +62,12 @@
     background-color: #f4f4fb;
     border-radius: 10px;
     padding: 23px 30px;
+    // display: none;
+
+ 
+    @include breakpointsMaxW($bp-576) {
+      padding: 15px 20px;
+    }
 
     &--textarea {
       height: 130px;
