--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,7 @@
 @import './components/menu';
 @import './components/menu-mobile';
 @import './components/form-submit';
+@import './components/accordion';
 
 // * ===== Card Components
 
