--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -200,6 +200,16 @@ body {
   &__box {
     width: 100%;
     border-radius: 10px;
+    position: relative;
+
+    .aside-box-link {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+    }
   }
 }
 
@@ -380,5 +390,3 @@ input[type='file'] {
     background-color: #f4f4fb;
   }
 }
-
-
