--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -52,3 +52,13 @@
 @import './components/service';
 @import './components/result';
 @import './components/promo';
+//
+@import './components/pumps-malfunctions';
+@import './components/pumps-service';
+@import './components/pumps-reasons';
+@import './components/pumps-spare';
+@import './components/repair-adv';
+@import './components/repair-price';
+@import './components/pumps-handling';
+@import './components/pumps-pools';
+@import './components/pumps-heating';
