--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -62,3 +62,10 @@
 @import './components/pumps-handling';
 @import './components/pumps-pools';
 @import './components/pumps-heating';
+@import './components/boilers-malfunctions';
+@import './components/boilers-required';
+@import './components/boilers-reasons';
+@import './components/boilers-allday';
+@import './components/boilers-handling';
+@import './components/boilers-service';
+@import './components/boilers-repair';
