--- a/app/scss/components/_boilers-allday.scss
+++ b/app/scss/components/_boilers-allday.scss
@@ -1,14 +1,15 @@
-.pumps-spare {
+.boilers-allday {
   @include adaptive-value('padding-top', 80, 40, 1);
   @include adaptive-value('padding-bottom', 80, 40, 1);
   background-position: right center;
+  overflow-x: hidden;
 
   &__wrapper {
     position: relative;
   }
 
   &__offer {
-    width: 55%;
+    width: 52%;
 
     @include breakpointsMaxW($bp-991) {
       width: 100%;
@@ -23,9 +24,10 @@
 
   &__title {
     font-family: $Circe;
-    max-width: 420px;
+    max-width: 515px;
+    letter-spacing: 1.1px;
     @include fz45();
-    @include adaptive-value('margin-bottom', 50, 40, 1);
+    @include adaptive-value('margin-bottom', 35, 30, 1);
 
     @include breakpointsMaxW($bp-991) {
       max-width: 100%;
@@ -34,23 +36,31 @@
 
   &__text {
     @include adaptive-value('margin-bottom', 40, 30, 1);
+    line-height: 1.8;
+
+    p {
+      &:not(:last-child) {
+        margin-bottom: 15px;
+      }
+    }
   }
 
   &__preview {
-    width: 490px;
-    max-height: 530px;
+    width: 630px;
+    max-height: 575px;
     min-height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
+    top: 0;
+    right: -130px;
     z-index: -1;
 
     @include breakpointsMaxW($bp-container) {
-      width: calc(400px + (490 - 400) * ((100vw - 991px) / (1230 - 991)));
+      width: calc(400px + (550 - 400) * ((100vw - 991px) / (1230 - 991)));
+      right: 0;
+      top: 10%;
     }
 
     @include breakpointsMaxW($bp-991) {
@@ -67,20 +77,30 @@
   }
 
   &__box {
-    padding: 65px 35px;
+    padding: 40px 35px;
     border-left: 13px solid var(--color-accent);
     width: 65%;
+    line-height: 1.8;
     @include backgroundImage(
       url('../images/content/pumps-spare-overlay.png'),
       cover
     );
+    @include adaptive-value('font-size', 17, 15, 1);
+
+    p {
+      max-width: 605px;
+
+      @include breakpointsMaxW($bp-991) {
+        max-width: 100%;
+      }
+    }
 
     @include breakpointsMaxW($bp-991) {
       width: 100%;
     }
-    
+
     @include breakpointsMaxW($bp-768) {
-      padding: 20px 30px;
+      padding: 20px;
     }
   }
 }
