--- a/app/scss/components/_promo.scss
+++ b/app/scss/components/_promo.scss
@@ -1,6 +1,7 @@
 .promo {
   font-family: $Circe;
   position: relative;
+
   &__wrapper {
     min-height: 640px;
     @include adaptive-value('padding-top', 50, 30, 1);
@@ -10,22 +11,27 @@
       min-height: auto;
     }
   }
+
   &__title {
     @include fz45();
     max-width: 510px;
     @include adaptive-value('margin-bottom', 50, 30, 1);
+
     @include breakpointsMaxW($bp-991) {
       margin: 0 auto;
       margin-bottom: 50px;
       text-align: center;
     }
+
     @include breakpointsMaxW($bp-768) {
       margin-bottom: 30px;
     }
   }
+
   &__text {
     margin-bottom: 35px;
   }
+
   &__offer {
     max-width: 580px;
 
@@ -208,6 +214,84 @@
       &__offer {
         @include breakpointsMaxW($bp-container) {
           max-width: 550px;
+        }
+
+        @include breakpointsMaxW($bp-991) {
+          max-width: 100%;
+          margin-bottom: 30px;
+        }
+      }
+
+      &__preview {
+        position: absolute;
+        right: -90px;
+        width: 590px;
+        height: 545px;
+        top: 50%;
+        transform: translateY(-50%);
+
+        @include breakpointsMaxW($bp-container) {
+          width: calc(400px + (590 - 400) * ((100vw - 991px) / (1230 - 991)));
+          height: calc(450px + (545 - 450) * ((100vw - 991px) / (1230 - 991)));
+          right: 0;
+        }
+
+        @include breakpointsMaxW($bp-991) {
+          position: static;
+          max-width: 400px;
+          width: 100%;
+          height: 400px;
+          transform: translateY(0);
+        }
+
+        @include breakpointsMaxW($bp-576) {
+          max-width: 300px;
+          height: 300px;
+        }
+      }
+    }
+  }
+
+  &--boilers {
+    overflow: hidden;
+    @include backgroundImage(
+      url('../images/content/promo-boilers.jpg'),
+      contain
+    );
+    background-color: #f8f8f8;
+
+    @include breakpointsMaxW(1920px) {
+      background-size: cover;
+    }
+
+    @include breakpointsMaxW($bp-991) {
+      padding-bottom: 300px;
+      background-size: 900px;
+      background-position: 200% 100%;
+    }
+
+    @include breakpointsMaxW($bp-768) {
+      background-position: 85% 100%;
+    }
+
+    @include breakpointsMaxW($bp-576) {
+      padding-bottom: 230px;
+      background-size: 700px;
+      // background-position: 85% 100%;
+    }
+
+    .promo {
+      &__wrapper {
+        position: relative;
+      }
+
+      &__title {
+        max-width: 100%;
+      }
+
+      &__offer {
+        @include breakpointsMaxW($bp-container) {
+          max-width: 630px;
         }
 
         @include breakpointsMaxW($bp-991) {
