--- a/app/scss/components/_repair-adv.scss
+++ b/app/scss/components/_repair-adv.scss
@@ -74,7 +74,11 @@
     }
   }
 
-  &--boilers{
-    
+  &--viessman {
+    .repair-adv {
+      &__top {
+        max-width: 1070px;
+      }
+    }
   }
 }
