--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -69,3 +69,8 @@
 @import './components/boilers-handling';
 @import './components/boilers-service';
 @import './components/boilers-repair';
+@import './components/viessman-handling';
+@import './components/viessman-service';
+@import './components/viessman-repair';
+@import './components/viessman-allday';
+@import './components/viessman-reasons';
