--- a/app/scss/components/_boilers-required.scss
+++ b/app/scss/components/_boilers-required.scss
@@ -49,7 +49,6 @@
       position: static;
       transform: translateY(0);
       order: 1;
-
       width: 500px;
       height: 400px;
       display: flex;
@@ -96,6 +95,31 @@
 
       &:not(:last-child) {
         margin-bottom: 30px;
+      }
+    }
+  }
+
+  &--viessman {
+    .boilers-required {
+      &__img {
+        width: 530px;
+        left: 0;
+
+        @include breakpointsMaxW($bp-991) {
+          max-width: 400px;
+          width: 100%;
+        }
+      }
+
+      &__box {
+        @include breakpointsMaxW($bp-container) {
+          max-width: calc(
+            500px + (850 - 500) * ((100vw - 991px) / (1230 - 991))
+          );
+        }
+        @include breakpointsMaxW($bp-991) {
+          max-width: 100%;
+        }
       }
     }
   }
