--- a/app/scss/components/_viessman-repair.scss
+++ b/app/scss/components/_viessman-repair.scss
@@ -1,4 +1,4 @@
-.boilers-repair {
+.viessman-repair {
   font-family: $Circe;
   color: #575757;
   @include adaptive-value('padding-top', 80, 50, 1);
@@ -42,15 +42,15 @@
   }
 
   &__preview {
-    width: 570px;
-    max-height: 600px;
+    width: 425px;
+    max-height: 580px;
     min-height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 50%;
-    right: -10px;
+    right: 90px;
     transform: translateY(-50%);
     z-index: -1;
 
@@ -60,12 +60,12 @@
     }
 
     @include breakpointsMaxW($bp-991) {
-      max-width: 450px;
+      max-width: 400px;
       width: 100%;
       position: static;
       transform: translateY(0);
       margin: 0 auto;
-      max-height: 430px;
+      max-height: 400px;
       min-height: 300px;
     }
 
