сделал по примеру уже существующего сайта

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -80,7 +80,7 @@ body {
   line-height: 1;
   background-color: var(--color-accent);
   color: var(--color-dark);
-  transition: 250ms ease;
+  transition: 300ms ease;
   font-size: 17px;
   font-weight: 700;
   border-radius: 22px;
@@ -104,8 +104,16 @@ body {
   }
 
   &:hover {
+    background-color: #3e98e6;
+    border-color: #3e98e6;
+    color: var(--color-white);
+  }
+
+  &--shadow {
+    box-shadow: 0 0 29px var(--color-accent);
+
     &:hover {
-      box-shadow: 0px 0px 29px 0px var(--color-accent);
+      box-shadow: 0 0 29px #3f5eba;
     }
   }
 
