--- a/app/scss/components/_contacts.scss
+++ b/app/scss/components/_contacts.scss
@@ -6,7 +6,8 @@
   &__wrapper {
     display: grid;
     grid-template-columns: minmax(auto, 390px) 1fr;
-    @include adaptive-value('gap', 50, 30, 1);
+    gap: 50px;
+
     @include breakpointsMaxW($bp-991) {
       grid-template-columns: 1fr;
     }
@@ -31,17 +32,16 @@
 
   &__link {
     display: block;
-    font-size: 18px;
     line-height: 1;
-    font-weight: 300;
+    font-weight: 400;
     color: #191919;
     padding-left: 30px;
     position: relative;
-    transition: 150ms;
+    transition: 250ms;
+    @include adaptive-value('font-size', 21, 15, 1);
 
     &:hover {
-      color: var(--color-black);
-      font-weight: 700;
+      color: #3f5eba;
     }
 
     &::after {
@@ -55,20 +55,29 @@
     }
 
     &--phone {
+      font-weight: 700;
+
       &::after {
         @include maskImage(url('../images/icons/whatsapp.svg'), contain);
       }
     }
+
     &--address {
       &::after {
         @include maskImage(url('../images/icons/location.svg'), contain);
       }
+
+      &:hover {
+        color: inherit;
+      }
     }
+
     &--mail {
       &::after {
         @include maskImage(url('../images/icons/mail.svg'), contain);
       }
     }
+
     &--instagram {
       &::after {
         @include maskImage(url('../images/icons/instagram.svg'), contain);
@@ -94,68 +103,107 @@
     font-weight: 700;
     transition: 150ms ease;
 
- 
+    @include breakpointsMaxW($bp-768) {
+      padding: 15px 30px;
+      font-size: 20px;
+    }
+
+    @include breakpointsMaxW($bp-360) {
+      width: 100%;
+    }
+
     &:active {
       box-shadow: 0px 0px 0px 0px var(--color-accent);
     }
   }
 
   &__download {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    overflow: hidden;
-    border-radius: 21px;
+    display: block;
+    padding: 14px 54px 14px 44px;
+    border-right: 1px solid var(--color-accent);
+    position: relative;
     border: 1px solid var(--color-accent);
-    @include adaptive-value('margin-bottom', 33, 20, 1);
+    border-radius: 21px;
+    max-width: 273px;
+    width: 100%;
+    margin-bottom: 35px;
+    text-align: center;
+    line-height: 1;
+    font-size: 16px;
 
-    &-link {
-      width: 50%;
-      font-size: 14px;
-      line-height: 19px;
-      font-weight: 300;
-      color: #191919;
-      padding: 13px 20px;
-      background-color: var(--color-white);
-      transition: 150ms ease;
+    span {
+      position: relative;
+      padding-left: 27px;
 
-      @include breakpointsMaxW($bp-576) {
-        font-size: 12px;
-        padding: 10px;
-        text-align: center;
-      }
-
-      &:hover {
-        background-color: var(--color-accent);
-        color: var(--color-black);
-      }
-
-      &--download {
-        padding-left: 44px;
-        border-right: 1px solid var(--color-accent);
-        position: relative;
-        @include breakpointsMaxW($bp-360) {
-          padding-left: 30px;
-        }
-
-        &::after {
-          @include elDef();
-          width: 20px;
-          height: 20px;
-          @include backgroundImage(url('../images/icons/pdf.svg'), contain);
-          top: 50%;
-          transform: translateY(-50%);
-          left: 10px;
-          @include breakpointsMaxW($bp-576) {
-            left: 20px;
-          }
-          @include breakpointsMaxW($bp-360) {
-            left: 10px;
-          }
-        }
+      &::after {
+        @include elDef();
+        width: 20px;
+        height: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        @include backgroundImage(url('../images/icons/pdf.svg'), contain);
       }
     }
   }
+
+  // &__download {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-between;
+  //   overflow: hidden;
+  //   border-radius: 21px;
+  //   border: 1px solid var(--color-accent);
+  //   margin-bottom: 30px;
+
+  //   &-link {
+  //     width: 50%;
+  //     font-size: 14px;
+  //     line-height: 19px;
+  //     font-weight: 300;
+  //     color: #191919;
+  //     padding: 13px 20px;
+  //     background-color: var(--color-white);
+  //     transition: 150ms ease;
+
+  //     @include breakpointsMaxW($bp-576) {
+  //       font-size: 12px;
+  //       padding: 10px;
+  //       text-align: center;
+  //     }
+
+  //     &:hover {
+  //       background-color: var(--color-accent);
+  //       color: var(--color-black);
+  //     }
+
+  //     &--download {
+  //       padding-left: 44px;
+  //       border-right: 1px solid var(--color-accent);
+  //       position: relative;
+
+  //       @include breakpointsMaxW($bp-360) {
+  //         padding-left: 30px;
+  //       }
+
+  //       &::after {
+  //         @include elDef();
+  //         width: 20px;
+  //         height: 20px;
+  //         @include backgroundImage(url('../images/icons/pdf.svg'), contain);
+  //         top: 50%;
+  //         transform: translateY(-50%);
+  //         left: 10px;
+  //         @include breakpointsMaxW($bp-576) {
+  //           left: 20px;
+  //         }
+  //         @include breakpointsMaxW($bp-360) {
+  //           left: 10px;
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 
   &--video {
     .contacts {
